# dashcam-processor

./: .env.example  .gitignore  AGENTS.md  CMakeLists.txt  analysis_report.md  docker-compose.yml  main.py  requirements.txt  test_pipeline.py  test_writer.py
app/: init.py  main.py
config/: config.json  loader.py
db/: init_db.py
docs/: AGENTS.md  TODO.md  api.md  api_reference.md  architectural_blueprint.md  architecture_overview.md  backpressure_overview.md  configuration_reference.md  db_schema.md  deployment_guide.md  operations.md  quick_start.md  shutdown_overview.md  task_flow_overview.md  task_system_overview.md  web_ui_overview.md
main_server/: README.md  alembic.ini
pipeline/: categories.py  dispatch_handlers.py  dispatcher.py  frame_store.py  logger.py  queues.py  scheduler.py  shutdown.py  silence.py  storage.py  task.py  video_reader.py  writer.py
plans/: preprocessor_workload_analysis.md  separation_decision_guide.md  workload_separation_diagram.md  (+1 more)
workhorse/: .env.example  CMakeLists.txt  README.md  config.py  requirements.txt  task_models.py
workhorse/src/: main.cpp
workhorse/src/core/: car.h  config.h  hardware.cpp  hardware.h  logger.cpp  logger.h  resource.cpp  resource.h  scheduler.cpp  scheduler.h  task.cpp  task.h  taskQueue.cpp  taskQueue.h  tui.cpp  tui.h  worker.cpp  worker.h
workhorse/src/core/hardware/: cpu.cpp  cpu.h  lpr.cpp  lpr.h  tesseract.cpp  tesseract.h  yoloV7.cpp  yoloV7.h
workhorse/src/core/tasks/: cpu.cpp  cpu.h  detectCars.cpp  detectCars.h  lpr.cpp  lpr.h  moveFile.cpp  moveFile.h  saveImg.cpp  saveImg.h  splitVideo.cpp  splitVideo.h  tesseract.cpp  tesseract.h  testCPU.cpp  testCPU.h  testDarknet.cpp  testDarknet.h  yoloV7.cpp  yoloV7.h
workhorse/src/core/tasks/cpu/: moveFile.cpp  moveFile.h  saveImg.cpp  saveImg.h  splitVideo.cpp  splitVideo.h  testCPU.cpp  testCPU.h
workhorse/src/core/tasks/lpr/: detectLicensePlates.cpp  detectLicensePlates.h
workhorse/src/core/tasks/tesseract/: readLicensePlate.cpp  readLicensePlate.h
workhorse/src/core/tasks/yoloV7/: detectCars.cpp  detectCars.h
workhorse/src/util/: callback.cpp  callback.h  flag.h  registry.h  timer.cpp  timer.h
(+98 files in other folders)
